; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_thread_destruct_special_reply_port.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_thread_destruct_special_reply_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_destruct_special_reply_port(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %19 [
    i32 130, label %7
    i32 129, label %11
    i32 128, label %15
  ]

7:                                                ; preds = %2
  %8 = call i32 (...) @mach_task_self()
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @mach_port_destruct(i32 %8, i32 %9, i32 -1, i32 0)
  store i32 %10, i32* %3, align 4
  br label %21

11:                                               ; preds = %2
  %12 = call i32 (...) @mach_task_self()
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @mach_port_destruct(i32 %12, i32 %13, i32 0, i32 0)
  store i32 %14, i32* %3, align 4
  br label %21

15:                                               ; preds = %2
  %16 = call i32 (...) @mach_task_self()
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @mach_port_deallocate(i32 %16, i32 %17)
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %15, %11, %7
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @mach_port_destruct(i32, i32, i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_port_deallocate(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
